2013-05-16         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.c (fill_stat_array): For _WIN32 use a blocksize of
	4096 for the "blksize" element, per Eli Zaretskii.

	* configure.ac [AC_STRUCT_ST_BLKSIZE]: Add call that was missing.
	ARGH!!!!

2013-05-14  Eli Zaretskii  <eliz@gnu.org>

	* rwarray.c [__MINGW32__]: Include winsock2.h instead of
	arpa/inet.h.

	* readdir.c [__MINGW32__]: Include windows.h.
	Include gawkapi.h before gawkdirfd.h, since the former defines
	FAKE_FD_VALUE needed by the latter.
	(ftype): Accept an additional argument, the directory that is
	being read.  Callers changed.
	[!DT_BLK]: Produce the file's type by calling 'stat' on it, if the
	dirent structure doesn't provide that.
	(get_inode): New function, to produce inode values on MS-Windows.
	(dir_get_record): Use it.

	* inplace.c (chown, link) [__MINGW32__]: Redirect to existing
	library functions.
	(mkstemp) [__MINGW32__]: New function, for MinGW, which doesn't
	have it in its library.
	(do_inplace_end) [__MINGW32__]: Remove the old file before
	renaming the new, since 'rename' on Windows cannot overwrite
	existing files.

	* gawkdirfd.h (ENOTSUP): Define to ENOSYS if not already defined.
	(DIR_TO_FD): If not defined yet, define to FAKE_FD_VALUE.

	* filefuncs.c (get_inode) [_WIN32]: New function, produces the
	file index used on Windows as its inode.
	(fill_stat_array) [_WIN32]: Use it.

2013-05-09         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.0: Release tar ball made.

2013-04-18         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Update copyright.
	For z/OS: If uname output is OS/390, just blast the Makefile,
	same as for MirBSD.

2013-04-17         Corinna Vinschen      <vinschen@redhat.com>

	* Makefile.am (MY_LIBS): Use $(LTLIBINTL) since we use libtool,
	not LIBINTL.

2013-04-16         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.c, fnmatch.c, fork.c, ordchr.c, readdir.c, readfile.c,