@@ -1,3 +1,8 @@
+2013-05-16         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* Makefile.am (install-data-hook): Remove .la files installed by
+	Automake.  Leaves less clutter, if not (yet) less noise.
+
 2013-05-16         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* filefuncs.c (fill_stat_array): For _WIN32 use a blocksize of
